# aoo

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  INSTALL.md  README.md
.git-ci/: gitlab-iem.yml
aoo/: CMakeLists.txt
aoo/src/: aoo.cpp  binmsg.hpp  data_frame.cpp  data_frame.hpp  detail.hpp  events.hpp  memory.hpp  packet_buffer.cpp  packet_buffer.hpp  resampler.cpp  resampler.hpp  rt_memory_pool.hpp  sink.cpp  sink.hpp  source.cpp  source.hpp
aoo/src/codec/: null.cpp  opus.cpp  pcm.cpp
aoo/src/net/: client.cpp  client.hpp  client_endpoint.cpp  client_endpoint.hpp  client_events.hpp  detail.cpp  detail.hpp  event.hpp  message_buffer.cpp  message_buffer.hpp  osc_stream_receiver.hpp  peer.cpp  peer.hpp  ping_timer.hpp  server.cpp  server.hpp  server_events.hpp  simulate.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
cmake/: AooConfig.cmake.in  FindOpus.cmake  FindPortAudio.cmake  aoo.pc.in  pthread_rwlock.cpp  sa_len.cpp  test_atomic.cmake
common/: bit_utils.hpp  copyable_atomic.hpp  lockfree.hpp  log.hpp  net_utils.cpp  net_utils.hpp  priority_queue.hpp  sync.cpp  sync.hpp  tcp_server.cpp  tcp_server.hpp  time.cpp  time.hpp  udp_server.cpp  udp_server.hpp  utils.hpp
doc/: aoo_protocol.md
doxygen/: CMakeLists.txt  Doxyfile.in
examples/c/: CMakeLists.txt  simple_peer.c  simple_receiver.c  simple_sender.c  utils.c  utils.h
examples/cpp/: CMakeLists.txt  simple_peer.cpp  simple_receiver.cpp  simple_sender.cpp  utils.cpp  utils.hpp
include/: aoo.h  aoo_client.h  aoo_client.hpp  aoo_codec.h  aoo_controls.h  aoo_defines.h  aoo_events.h  aoo_requests.h  aoo_server.h  aoo_server.hpp  aoo_sink.hpp  aoo_source.hpp  aoo_types.h
include/aoo/: aoo.h  aoo_client.h  aoo_client.hpp  aoo_codec.h  aoo_config.h  aoo_controls.h  aoo_defines.h  aoo_events.h  aoo_requests.h  aoo_server.h  aoo_server.hpp  aoo_sink.h  aoo_sink.hpp  aoo_source.h  aoo_source.hpp  aoo_types.h
include/aoo/codec/: aoo_null.h  aoo_opus.h  aoo_pcm.h
include/codec/: aoo_null.h  aoo_opus.h  aoo_pcm.h
pd/: CMakeLists.txt  aoo_client-help.pd  aoo_net-help.pd  aoo_receive~-help.pd  aoo_send~-help.pd  aoo_server-help.pd  mc_aoo_receive~.pd  mc_aoo_send~.pd
pd/src/: aoo_client.cpp  aoo_common.cpp  aoo_common.hpp  aoo_node.cpp  aoo_receive~.cpp  aoo_send~.cpp  aoo_server.cpp  aoo_setup.cpp
pd/tests/: network_test.pd
sc/: CMakeLists.txt  aoo_test.scd
sc/HelpSource/Classes/: Aoo.schelp  AooAddr.schelp  AooClient.schelp  AooCtl.schelp  AooData.schelp  AooDispatcher.schelp  AooEndpoint.schelp  AooError.schelp  AooFormat.schelp  AooFormatNull.schelp  AooFormatOpus.schelp  AooFormatPCM.schelp  AooGroup.schelp  AooPeer.schelp  AooReceive.schelp  AooReceiveCtl.schelp  AooSend.schelp  AooSendCtl.schelp  AooServer.schelp  AooUser.schelp
sc/HelpSource/Guides/: AOO_Introduction.schelp
sc/classes/: Aoo.sc  AooClient.sc  AooReceive.sc  AooSend.sc  AooServer.sc
sc/src/: Aoo.cpp  Aoo.hpp  AooClient.cpp  AooClient.hpp  AooNode.cpp  AooNode.hpp  AooReceive.cpp  AooReceive.hpp  AooSend.cpp  AooSend.hpp  AooServer.cpp  AooServer.hpp  rt_shared_ptr.hpp
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_c_interface.c  test_relay.cpp  test_rt_memory_pool.cpp
